z-index corrected

--- a/style/style.css
+++ b/style/style.css
@@ -55,7 +55,7 @@ header{
     position: absolute;
     left: 0px;
     right: 0px;
-    z-index: 10;
+    z-index: -1;
 }
 
 header .fixed{
